# ai-information-collection-app

./: .env.example  .gitignore  Dockerfile  Dockerfile.poetry  README.md  makefile  pyproject.poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  run_container.sh
ai-information-collection-app/: package-lock.json  package.json
src/: lambda_function.py
src/domain/entities/: send_email.py  text_generation.py
src/domain/gateway/: send_email_gateway.py  text_generation_gateway.py
src/domain/service_interfaces/: text_generation_service.py
src/infrastructure/: aws_client.py  config.py  lambda_function.py  openai_gateway.py  openai_service.py  perplexity_gateway.py  perplexity_text_generation_gateway.py  ses_send_email_gateway.py
src/infrastructure/gateway/: perplexity_text_generation_gateway.py  ses_send_email_gateway.py
src/usecase/: send_email_usecase.py  text_generation_usecase.py
tests/: conftest.py  test_lambda_function.py  test_perplexity_text_generation_gateway.py  test_ses_send_email_gateway.py
tests/domain/entities/: test_send_email.py
tests/infrastructre/: test_perplexity_text_generation_gateway.py  test_ses_send_email_gateway.py
tests/infrastructure/: test_perplexity_text_generation_gateway.py  test_ses_send_email_gateway.py
tests/mock/infrastructre/: mock_send_email_gateway.py  mock_text_generation_gateway.py
tests/mock/infrastructure/: mock_send_email_gateway.py  mock_text_generation_gateway.py
tests/usecase/: test_send_email_usecase.py  test_text_generation_usecase.py
