[project]
name = "ai-information-collection-app"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    { name = "kake-t", email = "36560265+kake-t@users.noreply.github.com" },
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "boto3==1.35.92",
    "botocore==1.35.92",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "distro==1.9.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jiter==0.8.2",
    "jmespath==1.0.1",
    "openai==1.58.1",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "s3transfer==0.10.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-mock==3.14.0", "moto==5.0.26"]
[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",     # undocumented
    "D203",   # one blank line before class
    "D213",   # multi-line summary second line
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
    "PD011",  # pandas use of dot values
    "D400",
    "D415",
    "ANN401",
    "COM812",
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
exclude = ["tests"]
logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6
